--- a/theme/css/custom.css
+++ b/theme/css/custom.css
@@ -1,3 +1,19 @@
 :root {
-  --content-max-width: 70vw;
+  --content-max-width: 65vw;
+}
+
+/* ref: linenumber: https://github.com/shikijs/shiki/issues/3#issuecomment-830564854 */
+code {
+  counter-reset: step;
+  counter-increment: step 0;
+}
+
+code .line::before {
+  content: counter(step);
+  counter-increment: step;
+  width: 1rem;
+  margin-right: 1.5rem;
+  display: inline-block;
+  text-align: right;
+  color: rgba(115,138,148,.4)
 }
